test: freeze Java migration goldens